use relative url for images

--- a/_posts/2013-11-17-final.md
+++ b/_posts/2013-11-17-final.md
@@ -17,11 +17,11 @@ categories: news
 
 让我们记住这个时间，2013.11.17，下午2点的橘园，双方的决赛正式开始。场边的观众中不乏薛昊天，胡江南这样的院队大牌明星，双方的的拉拉队更是此起彼伏，为球员加油。
 
-![]({{site.baseurl}}/assets/img/news/2013-11-17/1.jpg)
+![]({{ "/assets/img/news/2013-11-17/1.jpg" | relative_url }})
 
 回到比赛。决赛终究是决赛，双方都不敢贸然进行大的出球，表现得颇为谨慎。中场的拼抢尤为激烈，球权几度易手。高工这边按照既定战术进行短传渗透，吉球王表现得尤为积极，奔跑冲刺不知疲倦，他知道这也许是他最后一次亮相健雄杯的赛场了。机械这边打起了他们擅长的防守反击，利用刘明明精准的长传来威胁对方球门。前10分钟的比赛颇为精彩。第10分钟比赛出现了转折，机械的队员或许是过于紧张在禁区内手球对方射门。裁判径直指向了12码点。点球！作为队内头号点球手，吉球王当然不让地站在了点球点。呼吸，奔跑，冲刺，应声入网！1:0！
 
-![]({{site.baseurl}}/assets/img/news/2013-11-17/2.jpg)
+![]({{ "/assets/img/news/2013-11-17/2.jpg" | relative_url }})
 
 进球后的吉相冰很激动，对于最近脚风一直不顺的他来说，这粒进球犹如强心剂。大三高工取得梦幻开局！不得不提一下机械的中后卫孙一洲，在上半场此后的次赛中，高工占据了场上优势，多次作出威胁射门，孙一洲表现出了犹如拉莫斯一般的状态，拦断抢截，屡屡作出神奇解围。若不是他的精彩表现，比分恐怕早已改变！双方后来再无建树，1:0带入中场。
 
@@ -29,9 +29,9 @@ categories: news
 
 终场哨声响，大三高工班终于等来了他们期待已久的健雄杯冠军！这是对他们3年来孜孜以求，努力付出的嘉奖。所谓苍天不负有心人，等待了3年，在离开九龙湖之际，他们终于得到了吴院足球的最高荣誉。凭借淘汰赛4粒进球，吉相冰也荣膺2013赛季最佳射手！但是对于他来说，团队的胜利超越一切，此刻他只想与队友们分享这份喜悦。高工队员高举奖杯的一瞬间，现场观众无不动容，这是一个团队的胜利，这是一份付出的胜利！
 
-![]({{site.baseurl}}/assets/img/news/2013-11-17/3.jpg)
+![]({{ "/assets/img/news/2013-11-17/3.jpg" | relative_url }})
 
-![]({{site.baseurl}}/assets/img/news/2013-11-17/4.jpg)
+![]({{ "/assets/img/news/2013-11-17/4.jpg" | relative_url }})
 
 至此，本年度的健雄杯足球赛也就落下了帷幕。在这历时3个月的鏖战中，健雄学子以不一样的方式展示了一样的风采，无论是传统的强队还是大一新军，都给我们以足球美好的享受。无论球技如何，这种班级凝聚，团结向上的精神需要我们带到学习和生活的每一个角落。老兵不死，老兵精神永存；初生牛犊不怕虎，我们需要这样的赛事，我们需要你们的参与！
 
