update game link in post

--- a/_posts/2013-09-06-group-2.md
+++ b/_posts/2013-09-06-group-2.md
@@ -7,6 +7,8 @@ categories: news
 
 *文 Jumping*
 
+[group-r2 613111大三高工  2 : 1  610121大二机电]({{ "seasons/2013/games/2013-09-06-1/" | relative_url }})
+
 在刚刚结束的一场健雄杯A组第二轮小组赛中，大三高工以2:1险胜大二机电联队，机电核心胡煜明先下一城，高工尖刀邵帅连扳两球。下面是详细战报。
 
 随着健雄院“金哨”周林峰的一声哨响，比赛在绵雨刚停的橘园体育场展开了。由于天气比较冷，再加上湿滑的场地，双方球员一开场都表现的比较拘谨，失误也比较多，尤其是大三高工，没有了上一场9:0狂胜的凶猛气势，原以为一边倒的比赛也渐渐有了看头，一场激烈的拉锯战就此诞生。
