--- a/_posts/2013-10-21-semi-final-2.md
+++ b/_posts/2013-10-21-semi-final-2.md
@@ -4,6 +4,8 @@ title:  "对决！大一电一VS大三电一！江南的表演赛！"
 categories: news
 ---
 
+[1/4-final 610131大一电一  0 : 3  610111大三电一]({{ "seasons/2013/games/2013-10-21-1/" | relative_url }})
+
 运动会刚一结束，在洋溢这兴奋气息的梅园田径场上炸开了大一电一和大三电一的新旧之决！面对这大三学长的华丽阵容，大一学弟并没有丝毫的胆怯。虽说在脚法上，大一电一的同学略显生疏，配合打的也并不是很好，但是他们他们的热情，为他们的防守带来不少加强！比赛刚一开始，战局一度陷入一边倒的局面，大三电一的胡江南带球直插地方腹部，大有单刀直入之势，面对个人能力如此出众的学长，大一学弟们可谓是草木皆兵，集体回防，却也难阻江南前进的脚步，只见，江南带球连慌五人之后，终于一脚打门，大一守门员预判失误，球漂亮进门，1：0！
 
 丢了一球的大一电一，阵脚被打乱不少，几度失误，导致仍然被大三电一，压在半场，然而进了一球的大三电一，配合在此略有失误，有些只指望胡江南个人能力的势头，江南孤身杀入地方禁区，心有余而力不足，若干次打门未果，加上大一电一守门员的预判准确起来，比赛进入僵局，迟迟没有进展。
