--- a/_posts/2013-10-20-semi-final-1.md
+++ b/_posts/2013-10-20-semi-final-1.md
@@ -6,6 +6,8 @@ categories: news
 
 *文 周林峰*
 
+[1/4-final 613111大三高工  2 : 0  610112大三电二]({{ "seasons/2013/games/2013-10-20-1/" | relative_url }})
+
 运动会结束了，但是对于大三高工和大三电二，他们的战斗才刚刚开始，为了这场健雄杯焦点战，高工班在比赛之前，进行了多次的进攻战术演练。电二也毫不示弱，早上很早就到了梅园足球场进行传球配合。
 
 比赛在大家大关注之下开始了，刚开场，电二攻势很猛，一度获得多次角球机会，而有着小鲁尼称号的电二头号球星周健，更是生龙活虎。而坐拥三大巨星的高工班，进攻则略显沉闷。比赛的第6分钟，吉贝尔，吉球王在中路带球突破，过了第一个人，紧接着右脚一扣，扣过了第二个防守队员之后，直接一脚怒射，宛如大圣一般，可惜球射的太正，被对方门将挡了出去，但是门将扑的不远，胡梅尔Dick迅速补射，可惜仍被对方门将挡出，今天巨星们好像都没穿射门靴。过了大概五分钟，周健发出角球发了一个前点，陈策在前点抢到球，离门不到2米，可惜角度太小了，没有起脚的机会，球被对方开出去了。双方焦灼了一会儿，高工班角球的机会，潘登开出角球，开到后点被对方挡道前点，这时，大圣吉球王，在正确的时间站在了正确的位置，跳起用脚把球踢进。打破僵局。高工班顿时压力小了很多。也许是因为压力小了，高工班进攻越打越好。奔齐尔在后场将进攻组织的有条不紊。第二十分钟，Di教练抢断周健，一路狂奔，从右路突入对方腹地，两下假动作晃过防守队员，紧接着一脚怒射，球又进了。电二班貌似被打蒙了，进攻毫无起色。
