game link in md post

--- a/_posts/2013-09-06-group-2.md
+++ b/_posts/2013-09-06-group-2.md
@@ -1,13 +1,13 @@
 ---
-layout: post
+layout: game_post
+season_key: "2013"
+game_key: "2013-09-06-1"
+
 title:  "雨战!---健雄杯A组第二轮,大三高工险胜大二机电联队"
 date:   2013-09-06
-categories: news
 ---
 
 *文 Jumping*
-
-[group-r2 613111大三高工  2 : 1  610121大二机电]({{ "seasons/2013/games/2013-09-06-1/" | relative_url }})
 
 在刚刚结束的一场健雄杯A组第二轮小组赛中，大三高工以2:1险胜大二机电联队，机电核心胡煜明先下一城，高工尖刀邵帅连扳两球。下面是详细战报。
 
