--- a/_posts/2013-10-15-knock-out.md
+++ b/_posts/2013-10-15-knock-out.md
@@ -1,10 +1,10 @@
 ---
-layout: post
-title:  "最已阵？最强之人复出，魔翼破荒，大三机械爆冷1:2不敌大一电二"
-categories: news
----
+layout: game_post
+season_key: "2013"
+game_key: "2013-10-15-1"
 
-[1/4-final 611111大三机械  1 : 2  610132大一电二]({{ "seasons/2013/games/2013-10-15-1/" | relative_url }})
+title:  "最已阵？最强之人复出，魔翼破荒，大三机械爆冷1:2不敌大一电二"
+---
 
 最已阵？最强之人复出，魔翼破荒，大三机械爆冷1:2不敌大一电二
 
