--- a/_posts/2013-11-17-final.md
+++ b/_posts/2013-11-17-final.md
@@ -1,20 +1,20 @@
 ---
-layout: post
+layout: game_post
+season_key: "2013"
+game_key: "2013-11-17-1"
+
 title:  "最强之人复苏，大三高工3年终夺冠"
 date:   2013-11-17
-categories: news
-game_key: "2013-11-17-1"
 ---
 
 *纪大三高工问鼎2013赛季健雄杯冠军*
 
 *文 周林峰*
 
-[final 613111大三高工  2 : 0  611131大一机械]({{ "/seasons/2013/games/2013-11-17-1" | relative_url }})
 
 足球比赛最大的意义似乎就在于永远有说不完的话题，结不清的恩怨。作为从大一开始就能闯进决赛的大三高工班的老男孩们来说，决赛似乎就是一个跨不过去的坎，2年前他们0:1负于了风头正劲的13届以吕力兢为核心的黄金一代；去年又1:2倒在了大四机械的学长脚下。决赛似乎成为了他们的阿喀琉斯之踵，隐隐作痛。
 
-时过境迁，光阴不再，他们已然成为对冠军最渴望的团队。队中整容相比于前两年并无太大变化。前场的吉相冰是球队的核心，曾经单场轰进7球的他不愿再次复制前两年决赛时受伤的历史；邵帅作为边锋在淘汰赛阶段屡屡有精彩表现；中后场的熊宽晨，潘登更是院队的主力配置，他们力保后场稳健，球门不失；组织核心沙奔出球稳健，视野开阔，做为铁腰出现在了首发名单之中。
+时过境迁，光阴不再，他们已然成为对冠军最渴望的团队。队中阵容相比于前两年并无太大变化。前场的吉相冰是球队的核心，曾经单场轰进7球的他不愿再次复制前两年决赛时受伤的历史；邵帅作为边锋在淘汰赛阶段屡屡有精彩表现；中后场的熊宽晨，潘登更是院队的主力配置，他们力保后场稳健，球门不失；组织核心沙奔出球稳健，视野开阔，做为铁腰出现在了首发名单之中。
 
 今天他们面对的是一支新兴的球队。大一机械在刘明明的带领下，让人眼前一亮。开阔的视野，出色的盘带能力，他是未来院队的建队核心。队伍冲击能力强，没有太多弱点，年轻而有活力。高工的老男孩们是否从他们身上看到了自己第一次踏上决赛舞台时的稚嫩和紧张呢？世纪大战一触即发，气氛紧张的领人窒息。双方的队长吉相冰和刘明明对于决赛都做了大量的部署，他们希望打出自己的技战术水平，凭借顽强意志拿下胜利。
 
