--- a/_posts/2013-10-20-semi-final-1.md
+++ b/_posts/2013-10-20-semi-final-1.md
@@ -1,12 +1,12 @@
 ---
-layout: post
+layout: game_post
+season_key: "2013"
+game_key: "2013-10-20-1"
+
 title:  "欧冠级享受，吉贝尔率队挺进4强"
-categories: news
 ---
 
 *文 周林峰*
-
-[1/4-final 613111大三高工  2 : 0  610112大三电二]({{ "seasons/2013/games/2013-10-20-1/" | relative_url }})
 
 运动会结束了，但是对于大三高工和大三电二，他们的战斗才刚刚开始，为了这场健雄杯焦点战，高工班在比赛之前，进行了多次的进攻战术演练。电二也毫不示弱，早上很早就到了梅园足球场进行传球配合。
 
