fix post categories

--- a/_posts/2013-10-15-knock-out.md
+++ b/_posts/2013-10-15-knock-out.md
@@ -4,6 +4,7 @@ season_key: "2013"
 game_key: "2013-10-15-1"
 
 title:  "最已阵？最强之人复出，魔翼破荒，大三机械爆冷1:2不敌大一电二"
+categories: news
 ---
 
 最已阵？最强之人复出，魔翼破荒，大三机械爆冷1:2不敌大一电二
