--- a/_posts/2013-10-21-semi-final-2.md
+++ b/_posts/2013-10-21-semi-final-2.md
@@ -4,6 +4,7 @@ season_key: "2013"
 game_key: "2013-10-21-1"
 
 title:  "对决！大一电一VS大三电一！江南的表演赛！"
+categories: news
 ---
 
 运动会刚一结束，在洋溢这兴奋气息的梅园田径场上炸开了大一电一和大三电一的新旧之决！面对这大三学长的华丽阵容，大一学弟并没有丝毫的胆怯。虽说在脚法上，大一电一的同学略显生疏，配合打的也并不是很好，但是他们他们的热情，为他们的防守带来不少加强！比赛刚一开始，战局一度陷入一边倒的局面，大三电一的胡江南带球直插地方腹部，大有单刀直入之势，面对个人能力如此出众的学长，大一学弟们可谓是草木皆兵，集体回防，却也难阻江南前进的脚步，只见，江南带球连晃五人之后，终于一脚打门，大一守门员预判失误，球漂亮进门，1：0！
