updates from gsf

--- a/_posts/2013-09-06-group-2.md
+++ b/_posts/2013-09-06-group-2.md
@@ -6,6 +6,7 @@ game_key: "2013-09-06-1"
 title:  "雨战!---健雄杯A组第二轮,大三高工险胜大二机电联队"
 date:   2013-09-06
 categories: news
+tags: 战报 8人制 13赛季 小组赛
 ---
 
 *文 Jumping*
