--- a/_posts/2013-11-17-final.md
+++ b/_posts/2013-11-17-final.md
@@ -6,6 +6,7 @@ game_key: "2013-11-17-1"
 title:  "最强之人复苏，大三高工3年终夺冠"
 date:   2013-11-17
 categories: news
+tags: 战报 8人制 13赛季 决赛
 ---
 
 *纪大三高工问鼎2013赛季健雄杯冠军*
